--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.6.2'
+    implementation('com.squareup.moshi:moshi-kotlin:1.12.0')
     implementation(platform('com.squareup.okhttp3:okhttp-bom:4.9.0'))
     implementation('com.squareup.okhttp3:logging-interceptor')
     implementation('io.reactivex.rxjava3:rxkotlin:3.0.1')
