--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'io.gitlab.arturbosch.detekt'
 }
 
 
@@ -41,6 +42,7 @@ android {
         viewBinding true
     }
 }
+
 
 dependencies {
 
