--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,7 @@
+import io.gitlab.arturbosch.detekt.Detekt
+import io.gitlab.arturbosch.detekt.DetektPlugin
+import io.gitlab.arturbosch.detekt.report.ReportMergeTask
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
@@ -5,8 +9,10 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.3"
+        classpath "com.android.tools.build:gradle:7.0.4"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.0"
+        classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.17.1"
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -15,4 +21,42 @@ buildscript {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+task reportMerge(type: ReportMergeTask) {
+    output = project.layout.buildDirectory.file("reports/detekt/merge.xml") // or "reports/detekt/merge.sarif"
+}
+
+subprojects {
+    apply plugin: "io.gitlab.arturbosch.detekt"
+        // The directories where detekt looks for source files.
+        // Defaults to `files("src/main/java", "src/test/java", "src/main/kotlin", "src/test/kotlin")`.
+        //sources = files("${project.rootDir}/app/src/main/java", "${project.rootDir}/app/src/main/kotlin")
+    detekt {
+        //toolVersion = "1.19.0"
+        parallel = true
+        config = files("${project.rootDir}/detekt.yml")
+
+        // Applies the config files on top of detekt's default config file. `false` by default.
+        buildUponDefaultConfig = true
+    }
+    plugins.withType(DetektPlugin) {
+        tasks.withType(Detekt) { detektTask ->
+            finalizedBy(reportMerge)
+
+            reportMerge.configure { mergeTask ->
+                mergeTask.input.from(detektTask.xmlReportFile) // or detektTask.sarifReportFile
+            }
+        }
+    }
+
+}
+
+tasks.withType(Detekt).configureEach {
+    reports {
+        xml.required.set(true)
+        html.required.set(true)
+        txt.required.set(true)
+        sarif.required.set(true)
+    }
 }
