Update gitignore file. Upgrade jdk from 8 to 11(required for new kotlin plugins).

--- a/detekt.yml
+++ b/detekt.yml
@@ -1,6 +1,6 @@
 #comments:
 #  active: true
-#  excludes: ['**/test/**','**/androidTest/**','**/*.Test.kt','**/*.Spec.kt','**/*.Spek.kt']
+#  excludes: ['**/test/**','**/androidTest/**','**/*.Test.kt','**/*.Spec.kt','**/*.Spek.kt]
 #  coroutines:
 #    active: true
 #    GlobalCoroutineUsage:
