--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Default version
 *.iml
 .gradle
 /local.properties
@@ -13,3 +14,35 @@
 .externalNativeBuild
 .cxx
 local.properties
+
+# Other version
+# Gradle files
+.gradle/
+build/
+
+# Local configuration file (sdk path, etc)
+#local.properties
+
+# Log/OS Files
+*.log
+
+# Android Studio generated files and folders
+captures/
+.externalNativeBuild/
+.cxx/
+*.apk
+output.json
+
+# IntelliJ
+#*.iml
+.idea/
+
+# Keystore files
+*.jks
+*.keystore
+
+# Google Services (e.g. APIs or Firebase)
+google-services.json
+
+# Android Profiling
+*.hprof
