--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'io.gitlab.arturbosch.detekt'
+    id 'kotlin-kapt'
 }
 
 
@@ -56,7 +57,10 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    kapt 'com.github.bumptech.glide:compiler:4.13.0'
 
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
