--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'io.gitlab.arturbosch.detekt'
     id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 
@@ -62,7 +63,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     kapt 'com.github.bumptech.glide:compiler:4.13.0'
 
-    //retrofit
+    // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.6.2'
     implementation('com.squareup.moshi:moshi-kotlin:1.12.0')
@@ -70,10 +71,14 @@ dependencies {
     implementation('com.squareup.okhttp3:logging-interceptor')
     implementation('io.reactivex.rxjava3:rxkotlin:3.0.1')
 
-    //Coroutine
+    // Coroutine
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    // DI Hilt
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
     // Test
     testImplementation 'junit:junit:4.+'
