--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ import io.gitlab.arturbosch.detekt.report.ReportMergeTask
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.hilt_version = '2.28-alpha'
     repositories {
         google()
         mavenCentral()
@@ -12,6 +13,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:7.0.4"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.0"
         classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.17.1"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
 
 
         // NOTE: Do not place your application dependencies here; they belong
