--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ import io.gitlab.arturbosch.detekt.report.ReportMergeTask
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.hilt_version = '2.28-alpha'
+    ext.hilt_version = '2.40'
     repositories {
         google()
         mavenCentral()
