create modules: common, data, domain, presentation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,15 +37,20 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = '11'
+        jvmTarget = '1.8'
     }
     buildFeatures {
         viewBinding true
     }
+    namespace 'com.pawel.worldline_android_technical_test'
 }
 
 
 dependencies {
+    implementation project(':domain')
+    implementation project(':common')
+    implementation project(':data')
+    implementation project(':presentation')
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
