--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,7 @@ dependencyResolutionManagement {
 }
 rootProject.name = "WorldLine_Android_Technical_Test"
 include ':app'
+include ':data'
+include ':domain'
+include ':presentation'
+include ':common'
