--- a/data-mock/src/main/AndroidManifest.xml
+++ b/data-mock/src/main/AndroidManifest.xml
@@ -1,3 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.pawel.worldline_android_technical_test.data_mock"/>
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.pawel.worldline_android_technical_test.data_mock">
+
+    <application
+        tools:targetApi="n"
+        android:networkSecurityConfig="@xml/network_security_config" />
+
+</manifest>
