Code quiality improvements according to detekt config.

--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -2,7 +2,7 @@
 
     <application>
         <activity
-            android:name="com.pawel.worldline_android_technical_test.HiltTestActivity"
+            android:name="com.pawel.movieapp.HiltTestActivity"
             android:exported="false"
 
             />
